[package]
name = "problem1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"]} 
serde_json = "1.0"
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features=["codec"] }
num-integer = "0.1"
tokio-stream = "0.1.10"
bytes = "1.2.1"
