[package]
name = "problem2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"]} 
tokio-util = { version = "0.7", features=["codec"] }
tokio-stream = "0.1.10"
bytes = "1.2.1"
futures = "0.3.24"
